# kube-helm-app

./: .gitignore  Dockerfile  boto3_test.py  buildtemplate.yaml  helmfile.yaml  pyproject.toml  test_file.py  testing.ipynb
Cons/: Dockerfile
app/: main.py
basic-app/: Chart.yaml  values.yaml
basic-app/templates/: deployment.yaml
