[tool.poetry]
name = "k8s project"
version = "0.1.0"
description = ""
authors = ["Akash Katuri <akashkaturi77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
